2010-12-29 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-selected-info.c (new_from_nautilus_file_info):
	* src/plugin-menu/nautilus-actions.c (menu_provider_get_file_items):
	Add debug messages to trace order and names in the selection.

	* src/plugin-menu/nautilus-module.c (set_log_handler):
	Remove obsolete TODO.

2010-12-26 Pierre Wieser <pwieser@trychlos.org>

	* src/core/Makefile.am:
	Add -fPIC parameter
	Get ride of 'relocation R_X86_64_32 against .rodata.str1.8' message.

2010-12-22 Pierre Wieser <pwieser@trychlos.org>

	* src/io-desktop/Makefile.am:
	* src/io-gconf/Makefile.am:
	* src/io-xml/Makefile.am:
	Also compile dynamic plugins with needed dependancies
	(get ride of #637797 when loaded from PcManFm)

	* src/nact/egg-sm-client-private.h:
	* src/nact/egg-sm-client-xsmp.c:
	Apply Mathias Clasen patch to build against Gtk+ 2.91.7.

	* doc/reference/Makefile.am: include auto created files in
	content_files, so that they are build before XML generation.

	* Makefile.am: Enable '-Wl,--as-needed' link option at make distcheck.

	* configure.ac:
	* m4/na-compiler-flags.m4: Define --enable-as-needed configure option.

	* src/core/Makefile.am: Build core library against its dependancies.
	Fix #637797 - -Wl,--as-needed bug.

	* run-autogen.sh: No more enable silent rules in development.

	* tools/release-tarball.sh: Fix remote install of the tarball.

2010-12-20 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Post-release bump version.

	* NEWS: Update before release.

	* README: Add some words about importer/exporter plugins.

	* m4/na-check-for-gtk.m4: New file.

	* configure.ac: Add check for building against Gtk+ 3.0.

	* m4/na-check-module.m4:
	* m4/na-nautilus-extdir.m4:
	* run-autogen.sh: Updated accordingly.

	* src/nact/base-keysyms.h: New file which holds defines for Gdk keys.

	* src/nact/Makefile.am:
	* src/nact/base-assistant.c (on_key_pressed_event):
	* src/nact/nact-iactions-list.c (on_key_pressed_event):